Fixing layout of popover on small screens

--- a/static/css/popover.css
+++ b/static/css/popover.css
@@ -14,6 +14,7 @@
 .toolbar ul {
   position: relative;
   margin: 0 5px;
+  width: auto;
 }
 
 /* The triangle on the balloon
